# mlxchat

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MEMORY.md  Makefile  PROGRESS.md  README.md  TODO.md  pyproject.toml
mlxchat/: __init__.py  __main__.py  checkpoint_manager.py  dataloader.py  dataset.py  engine.py  gpt.py  muon.py  quantization.py  tokenizer.py
rustbpe/: Cargo.toml  README.md
rustbpe/src/: lib.rs
scripts/: __init__.py  base_train.py  chat_cli.py  debug_gradients.py  diagnose_training.py  monitor_memory.py  quantize_checkpoint.py  test_gradients.py  test_train_loop.py  tok_train.py
tests/: __init__.py  test_checkpoint.py  test_dataloader.py  test_gpt.py  test_muon.py  test_tok_train.py  test_tokenizer.py
