[project]
name = "mlxchat"
version = "0.1.0"
description = "nanochat ported to MLX for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.20.0",
    "numpy>=1.26.0",
    "tiktoken>=0.11.0",
    "regex>=2025.9.1",
    "fastapi>=0.117.1",
    "uvicorn>=0.36.0",
    "datasets>=4.0.0",
    "psutil>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
