[project]
name = "mlxchat"
version = "0.1.0"
description = "nanochat ported to MLX for Apple Silicon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.20.0",
    "numpy>=1.26.0",
    "tiktoken>=0.11.0",
    "regex>=2025.9.1",
    "fastapi>=0.117.1",
    "uvicorn>=0.36.0",
    "datasets>=4.0.0",
    "psutil>=7.1.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
    "maturin>=1.9.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mlxchat*"]
exclude = ["rustbpe*"]

[tool.maturin]
module-name = "rustbpe"
bindings = "pyo3"
manifest-path = "rustbpe/Cargo.toml"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
